2011-12-25 (0.0.4)
 * Support simplecov
 * Add more tests
2011-10-08 (0.0.3)
 * Add permutation and subset implementations
2011-09-26 (0.0.2)
 * Depend on tins library
2011-07-17 (0.0.1)
 * Use gem_hadar
2010-11-01 (0.0.0)
  * Initial Version