@@ -1,3 +1,6 @@
+2012-10-31 (0.1.0)
+ * Included the Permutation features identity, power, and from_mapping
+   contributed by Pramukta Kumar <prak@mac.com>
 2011-12-25 (0.0.4)
  * Support simplecov
  * Add more tests
